Fixed stretching of tall slideshow photos

--- a/components/photo-module/client/src/styles/style.scss
+++ b/components/photo-module/client/src/styles/style.scss
@@ -342,6 +342,7 @@ $btn-margin: 106px;
       margin: auto;
       max-width: 100%;
       max-height: 100%;
+      width: auto;
     }
   }
 
